[package]
name = "tracecon"
version = "0.1.0"
authors = ["Magnus Kulke <mkulke@gmail.com>"]
edition = "2018"
license = "GPL-2.0 OR BSD-3-Clause"

[dependencies]
anyhow = "1.0"
libbpf-rs = "0.10"
libc = "0.2"
structopt = "0.3"
ctrlc = "3.1"
object = "0.25"
plain = "0.2"
sysinfo = "0.18"
prometheus = "0.12"
lazy_static = "1.4"
prometheus_exporter = { version = "0.8", default-features = false }

[build-dependencies]
libbpf-cargo = "0.7"
